# dlib-glib

./: .travis.yml  Dockerfile  README.md  meson.build
dlib-glib/: chip-detail.cpp  chip-detail.h  chip-detail.hpp  detector.cpp  detector.h  detector.hpp  frontal-face-detector.cpp  frontal-face-detector.h  frontal-face-detector.hpp  full-object-detection.cpp  full-object-detection.h  full-object-detection.hpp  image-window.cpp  image-window.h  image-window.hpp  image.cpp  image.h  image.hpp  image_window.cpp  image_window.h  image_window.hpp  meson.build  overlay-line.cpp  overlay-line.h  overlay-line.hpp  rectangle.cpp  rectangle.h  rectangle.hpp  shape-predictor.cpp  shape-predictor.h  shape-predictor.hpp  widgets.cpp  widgets.h  widgets.hpp
doc/reference/: dlib-glib-docs.xml  meson.build
test/: run-test.rb  run-test.sh  test-detector.rb  test-frontal-face-detector.rb  test-full-object-detection.rb  test-image.rb  test-rectangle.rb  test-shape-predictor.rb
